src/snapshots/blis__compile__tests__test_programs__closures_objects.blis.chunk.snap
---
source: src/compile.rs
description: "func main() {\n    let one = new_thing(\"uno\");\n    let two = new_thing(\"dos\");\n\n    println(one);\n    println(one.id, one.name);\n\n    println(two);\n    println(two.id, two.name);\n\n    one.two = two;\n    two.one = one;\n\n    println(one.two);\n    println(two.one);\n}\n\nlet counter = 0;\n\nfunc new_thing(name) {\n    counter = counter + 1;\n\n    object {\n        id = counter,\n        name = name,\n    }\n}\n\nmain();\n"
input_file: test_programs/closures_objects.blis
---
DisassembledChunk(
  constants: [
    Func(DisassembledFunc(
      name: "main",
      arity: 0,
      upvalues: 0,
      chunk: DisassembledChunk(
        constants: [
          String("uno"),
          String("dos"),
          String("id"),
          String("name"),
          String("two"),
          String("one"),
        ],
        globals: [
          "new_thing",
          "println",
        ],
        code: [
          GetGlobal(0),
          Constant(0),
          Call(1),
          GetGlobal(0),
          Constant(1),
          Call(1),
          GetGlobal(1),
          GetLocal(1),
          Call(1),
          Pop,
          GetGlobal(1),
          GetLocal(1),
          GetField(2),
          GetLocal(1),
          GetField(3),
          Call(2),
          Pop,
          GetGlobal(1),
          GetLocal(2),
          Call(1),
          Pop,
          GetGlobal(1),
          GetLocal(2),
          GetField(2),
          GetLocal(2),
          GetField(3),
          Call(2),
          Pop,
          GetLocal(1),
          GetLocal(2),
          SetField(4),
          Pop,
          GetLocal(2),
          GetLocal(1),
          SetField(5),
          Pop,
          GetGlobal(1),
          GetLocal(1),
          GetField(4),
          Call(1),
          Pop,
          GetGlobal(1),
          GetLocal(2),
          GetField(5),
          Call(1),
          Pop,
          Nil,
          PopUnderN(2),
          Return,
        ],
      ),
    )),
    Rational(((0, []), (1, [
      1,
    ]))),
    Func(DisassembledFunc(
      name: "new_thing",
      arity: 1,
      upvalues: 0,
      chunk: DisassembledChunk(
        constants: [
          Rational(((1, [
            1,
          ]), (1, [
            1,
          ]))),
          String("id"),
          String("name"),
        ],
        globals: [
          "counter",
          "object",
        ],
        code: [
          GetGlobal(0),
          Constant(0),
          Add,
          SetGlobal(0),
          GetGlobal(1),
          Object,
          GetGlobal(0),
          SetField(1),
          GetLocal(1),
          SetField(2),
          PopUnderN(0),
          Return,
        ],
      ),
    )),
  ],
  globals: [
    "main",
    "counter",
    "new_thing",
  ],
  code: [
    Closure(0, 0, []),
    DefineGlobal(0),
    Constant(1),
    DefineGlobal(1),
    Closure(2, 0, []),
    DefineGlobal(2),
    GetGlobal(0),
    Call(0),
    Pop,
    Nil,
    Return,
  ],
)
