src/snapshots/blis__compile__tests__test_programs__empty_type.blis.chunk.snap
---
source: src/compile.rs
description: "type OpenStruct;\n\nlet this = OpenStruct{\n    a = \"a\",\n};\nthis.b = \"b\";\n\nprintln(this);\nprintln(this.a);\nprintln(this.b);\n"
input_file: test_programs/empty_type.blis
---
DisassembledChunk(
  constants: [
    String("OpenStruct"),
    String("a"),
    String("b"),
  ],
  globals: [
    "OpenStruct",
    "this",
    "println",
  ],
  code: [
    Type(0),
    DefineGlobal(0),
    GetGlobal(0),
    Object,
    Constant(1),
    SetField(1),
    DefineGlobal(1),
    GetGlobal(1),
    Constant(2),
    SetField(2),
    Pop,
    GetGlobal(2),
    GetGlobal(1),
    Call(1),
    Pop,
    GetGlobal(2),
    GetGlobal(1),
    GetField(1),
    Call(1),
    Pop,
    GetGlobal(2),
    GetGlobal(1),
    GetField(2),
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
