src/snapshots/blis__compile__tests__test_programs__hello.blis.chunk.snap
---
source: src/compile.rs
description: "println(\"Hello, World!\");\n"
input_file: test_programs/hello.blis
---
Chunk(
  constants: [
    String("Hello, World!"),
  ],
  globals: [
    "println",
  ],
  code: [
    39,
    0,
    4,
    0,
    16,
    1,
    1,
    5,
    0,
  ],
)
