src/snapshots/blis__compile__tests__test_programs__if.blis.chunk.snap
---
source: src/compile.rs
description: "if 123 {\n    \"Yes\"\n} else {\n    \"No\"\n}\n\nif nil {\n    \"❌\"\n} else {\n    \"✓\"\n}\n"
input_file: test_programs/if.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      123,
    ]), (1, [
      1,
    ]))),
    String("Yes"),
    String("No"),
    String("❌"),
    String("✓"),
  ],
  globals: [],
  code: [
    Constant(0),
    JumpFalsePop(10),
    Constant(1),
    PopUnderN(0),
    Jump(7),
    Constant(2),
    PopUnderN(0),
    Pop,
    Nil,
    JumpFalsePop(10),
    Constant(3),
    PopUnderN(0),
    Jump(7),
    Constant(4),
    PopUnderN(0),
    Pop,
    Nil,
    Return,
  ],
)
