src/snapshots/blis__compile__tests__test_programs__logic.blis.chunk.snap
---
source: src/compile.rs
description: "let cond = 1 and 2 or true and false;\nif cond or !cond {\n    println(cond);\n}\n"
input_file: test_programs/logic.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      2,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [
    "cond",
    "println",
  ],
  code: [
    Constant(0),
    JumpFalsePeek(6),
    Pop,
    Constant(1),
    JumpTruePeek(10),
    Pop,
    True,
    JumpFalsePeek(5),
    Pop,
    False,
    DefineGlobal(0),
    GetGlobal(0),
    JumpTruePeek(7),
    Pop,
    GetGlobal(0),
    Not,
    JumpFalsePop(13),
    GetGlobal(1),
    GetGlobal(0),
    Call(1),
    Pop,
    Nil,
    PopUnderN(0),
    Nil,
    Pop,
    Nil,
    Return,
  ],
)
