src/snapshots/blis__compile__tests__test_programs__multiline_strings.blis.chunk.snap
---
source: src/compile.rs
description: "let haiku = \"multiline strings are\nsurprisingly easier\nimplementation\";\n\nprintln(haiku);\n"
input_file: test_programs/multiline_strings.blis
---
DisassembledChunk(
  constants: [
    String("multiline strings are\nsurprisingly easier\nimplementation"),
  ],
  globals: [
    "haiku",
    "println",
  ],
  code: [
    Constant(0),
    DefineGlobal(0),
    GetGlobal(1),
    GetGlobal(0),
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
